--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/zecs"]
 	path = libs/zecs
 	url = git@github.com:Dmoulart/zecs.git
+[submodule "libs/raylib"]
+	path = libs/raylib
+	url = https://github.com/ryupold/raylib.zig
